src/crode/test/invalid/invalidDivideByZero.crode
canvas "InvalidDivideByZero" width 800 height 600 {
  let x = 10 / 0

  let dot = circle {
    radius 5
    color black
  }

  draw dot at (x, 100)
}
